--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <html>
 <head>
 	<title>Hola Mundo!</title>
+	<style>
+	h1 {
+		color: red;
+	}
+
+	h2 {
+		color: blue;
+		text-decoration: underline;
+	}
+	</style>
 </head>
 <body>
 	<h1>Hello World!</h1>
+	<h2>My name is Eduardo</h2>
+	<p>I'm using Daniela's computer to make this page...</p>
 </body>
 </html>
