Removing Richard's styles

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<title>Hola Mundo!</title>
 	<style>
 	h1 {
-		color: red;
+		color: teal;
 	}
 
 	h2 {
-		color: blue;
+		color: aqua;
 		text-decoration: underline;
 	}
 	</style>
