add window alert

--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
 	<h1>Hello World!</h1>
 	<h2>My name is Eduardo</h2>
 	<p>I'm using Daniela's computer to make this page...</p>
+	<script>
+		document.querySelector('h1').addEventListener('click', function(){
+			window.alert('Click');
+		});
+	</script>
 </body>
 </html>
