--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<p>I'm using Daniela's computer to make this page...</p>
 	<script>
 		document.querySelector('h1').addEventListener('click', function(){
-			window.alert('Click');
+			window.alert('Un click!');
 		});
 	</script>
 </body>
