--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Daniela</a></h1>
+								<h1><a href="index.html" id="logo">D A N I E L A  E L I A S </a></h1>
 								<hr />
 								<p>Another fine freebie by HTML5 UP</p>
 							</header>
