--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<header>
 								<h1><a href="index.html" id="logo">D A N I E L A  E L I A S </a></h1>
 								<hr />
-								<p>Another fine freebie by HTML5 UP</p>
+								<p>personalizing online templates </p>
 							</header>
 							<footer>
 								<a href="#banner" class="button circled scrolly">Start</a>
