--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Hi. You're looking at <strong>Helios</strong>.</h2>
+						<h2>Hi. You're looking at <strong>Daniela's </strong>.</h2>
 						<p>
-							A (free) responsive site template by <a href="http://html5up.net">HTML5 UP</a>.
+							personalized template by <a href="http://html5up.net">changing the code</a>.
 							Built with HTML5/CSS3 and released under the <a href="http://html5up.net/license">CCA</a> license.
 						</p>
 					</header>
