--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 								<p>personalizing online templates </p>
 							</header>
 							<footer>
-								<a href="#banner" class="button circled scrolly">Start</a>
+								<a href="#banner" class="button circled scrolly">DE</a>
 							</footer>
 						</div>
 
