adding target blank

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo"><a href="http://instagram.com/eliasdaniela">D A N I E L A  E L I A S </a></h1>
+								<h1><a href="index.html" id="logo"><a href="http://instagram.com/eliasdaniela" target="_blank">D A N I E L A  E L I A S </a></h1>
 								<hr />
 								<p>personalizing <a href="http://google.com">online templates </p>
 							</header>
