--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<header>
 								<h1><a href="index.html" id="logo"><a href="http://instagram.com/eliasdaniela" target="_blank">D A N I E L A  E L I A S </a></h1>
 								<hr />
-								<p>personalizing <a href="http://google.com">online templates </p>
+								<p>personalizing <a href="http://google.com" target="_blank">online templates </p>
 							</header>
 							<footer>
 								<a href="#banner" class="button circled scrolly">DE</a>
@@ -63,10 +63,10 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Hi. You're <a href="http://looking.com">looking at <strong>Daniela's<a href="http://daniela.com"> </strong>.</h2>
+						<h2>Hi. You're <a href="http://looking.com" target="_blank">looking at <strong>Daniela's<a href="http://daniela.com" target="_blank"> </strong>.</h2>
 						<p>
-							personalized template by <a href="http://html5up.net">changing the code</a>.
-							Built with <a href="http://html.com">HTML5/CSS3 and released under the <a href="http://html5up.net/license">CCA</a> license.
+							personalized template by <a href="http://html5up.net" target="_blank">changing the code</a>.
+							Built with <a href="http://html.com" target="_blank">HTML5/CSS3 and released under the <a href="http://html5up.net/license">CCA</a> license.
 						</p>
 					</header>
 				</section>
